--- a/src/components/todo-list-item/todo-list-item.css
+++ b/src/components/todo-list-item/todo-list-item.css
@@ -1,18 +1,22 @@
 .todo-list-item-label
-.todo-list-item{
+.todo-list-item {
     font-size: 1.25rem;
 }
 
-.todo-list-item button{
+.todo-list-item button {
     width: 35px;
     margin: 3px;
 }
 
-.todo-list-item{
+.todo-list-item {
     display: flex;
 }
 
-.todo-list-item-label{
+.todo-list-item .done{
+    text-decoration: line-through;
+}
+
+.todo-list-item-label {
     margin-left: 1.25rem;
     line-height: 35px;
     cursor: pointer;
@@ -20,11 +24,11 @@
     margin-right: auto;
 }
 
-.todo-list-item.done .todo-list-item-label{
+.todo-list-item.done .todo-list-item-label {
     text-decoration: line-through;
 }
 
-.todo-list-item.important .todo-list-item-label{
+.todo-list-item.important .todo-list-item-label {
     font-weight: bold;
     color: steelblue;
 }
